--- a/style.css
+++ b/style.css
@@ -8,39 +8,54 @@ body{
     background-color: #effaff;
 }
 
-header input{
-    border-radius: 5px;
-    border: none;
+.product-display-heading{
+    font-size: 1.313rem;
+    line-height: 1.7rem;
 }
 
+
+/* =========== carousel image =============== */
 .carousel-image{
     max-height: 40vh;
     object-fit: cover;
 }
 
-.hero-card img{
+/* ===============Four product display in one container================== */
+
+.four-product-display-inner{
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    margin: 0;
+}
+
+.four-product-display-image{
     width: 100%;
     height: 100px;
     object-fit: cover;
 }
 
-.hero-card{
-    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+/* =============Full Width product display=============== */
+.full-width-container{
+    overflow-x: scroll;
 }
-
-/* ===========Full Width images============= */
-.full-width-images img{
+.full-width-container img{
     width: 200px;
     height: 200px;
     object-fit: cover;
 }
 
-.full-width-images-scroll{
-    overflow-x: scroll;
+/* ==========products card list============ */
+.card-img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
 }
 
-/* =====Footer====== */
+.card-footer{
+    background-color: white;
+    border: none;
+}
 
+/* ============ Footer =============== */
 footer ul li{
     list-style-type:square;
 }
